--- a/package.json
+++ b/package.json
@@ -5,24 +5,41 @@
   "main": "server/index.js",
   "scripts": {
     "setup": "node server/config/setup",
-    "start": "nodemon --config server/config/nodemon.json",
+    "start": "nodemon --config server/config/nodemon.json & webpack -w",
     "test": "./test/run.sh"
   },
   "author": "Concatapult <change-me@example.com>",
   "license": "MIT",
   "dependencies": {
+    "babel": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-latest": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
     "dotenv": "^2.0.0",
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "html-webpack-plugin": "^2.30.1",
+    "knex": "^0.12.5",
+    "pg": "*",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "webpack": "^3.5.5"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.0",
+    "babel-preset-env": "^1.5.2",
+    "babel-preset-react": "^6.24.1",
     "chai": "^3.5.0",
     "chai-subset": "^1.3.0",
     "mocha": "^3.1.2",
     "nodemon": "^1.11.0",
+    "pult-cli": "*",
     "supertest": "^2.0.0",
-    "supertest-as-promised": "^4.0.0",
-    "pult-cli": "*"
-  }
+    "supertest-as-promised": "^4.0.0"
+  },
+  "addedPultModules": [
+    "knex"
+  ]
 }
