--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
     "dotenv": "^2.0.0",
+    "eslint": "^4.5.0",
+    "eslint-config-airbnb": "^15.1.0",
     "express": "^4.14.0",
     "html-webpack-plugin": "^2.30.1",
     "knex": "^0.12.5",
@@ -33,6 +35,10 @@
     "babel-preset-react": "^6.24.1",
     "chai": "^3.5.0",
     "chai-subset": "^1.3.0",
+    "eslint-config-airbnb-base": "^11.3.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.2.1",
     "mocha": "^3.1.2",
     "nodemon": "^1.11.0",
     "pult-cli": "*",
