--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
+    "css-loader": "^0.28.5",
     "dotenv": "^2.0.0",
     "eslint": "^4.5.0",
     "eslint-config-airbnb": "^15.1.0",
@@ -26,6 +27,12 @@
     "pg": "*",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-waypoint": "^7.0.4",
+    "reset-css": "^2.2.1",
+    "semantic-ui-react": "^0.71.5",
+    "style-loader": "^0.18.2",
+    "waypoint": "^0.2.8",
+    "waypoints": "^4.0.1",
     "webpack": "^3.5.5"
   },
   "devDependencies": {
